--- a/BlindVacationFullstack/BlindVacationFullstack/BlindVacationFullstack.csproj
+++ b/BlindVacationFullstack/BlindVacationFullstack/BlindVacationFullstack.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.3.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
